Various Changes and tests

--- a/DrugManagement.Data/App.config
+++ b/DrugManagement.Data/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DrugManagement.Data.ManagementDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=DrugManagementDb;Integrated Security=True;Pooling=False"/>
+  </connectionStrings>
 </configuration>
